<resources>
    <string name="app_name">AuthN</string>
    <string name="label_email">Email address</string>
    <string name="input_hint_email">johndoe@mail.com</string>
    <string name="label_password">Password</string>
    <string name="input_hint_password">*****</string>
    <string name="label_providers">ID providers</string>


    <string name="title_login">Login to your account</string>
    <string name="button_text_login">Login</string>
    <string name="button_text_switch_register">Switch to register</string>

    <string name="title_register">Register new account</string>
    <string name="button_text_register">Register</string>
    <string name="button_text_switch_login">Switch to login</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="text_dashboard">You are authenticated with the following credentials.</string>
    <string name="button_text_logout">Logout</string>

    <string name="web_client_id">451782551370-erj2u8bqso2nquf8dkbcf8lkgvnsg1o8.apps.googleusercontent.com</string>

    <string name="facebook_app_id">7022517581177874</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">OVLMyE98bcWxp8R7KoXPtxO9DSI</string>
</resources>