<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:textAlignment="center"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="24dp"
        android:inputType="textEmailAddress"
        android:hint="@string/input_hint_email"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:hint="@string/input_hint_password"
        android:autofillHints="password" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_text_register" />

    <Button
        android:id="@+id/button_switch_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_button"
        android:text="@string/button_text_switch_login"
        android:textColor="?attr/colorPrimary" />

</LinearLayout>